tests/unconstrained-generics.chg.stderr


    return foo();
           ^^^^^  type error: unconstrained type variable created here
